test: [course] tests for publish course